--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "bson": "^4.2.2",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
+    "date": "^1.0.2",
+    "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.9"
   }
